--- a/package.json
+++ b/package.json
@@ -13,8 +13,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.7.2"
-  }
+  "license": "ISC"
 }
